<resources>
    <string name="app_name">MAD_final_paper_practise</string>

    <string name="co">The Course App</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="RegisterForm">Register Form</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="welcom">Welcome Username</string>
    <string name="sub">Subject</string>
    <string name="send">SEND</string>
    <string name="subject">Subject</string>
    <string name="mes">Message</string>
</resources>
